SERVER-18908: Write secondary oplog as a vector